--- a/css/registro.css
+++ b/css/registro.css
@@ -103,3 +103,13 @@
         margin-bottom: 0;
     }
 }
+
+/* --- Estilos solo para Escritorio --- */
+@media (min-width: 768px) {
+    #main-content {
+        /* Ajusta este valor para cambiar el espacio 
+           superior en la página de REGISTRO.
+        */
+        padding-top: 20px;
+    }
+}
