--- a/css/global.css
+++ b/css/global.css
@@ -123,7 +123,7 @@ body.flash-error h1 {
     min-height: 100vh;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     padding: 80px 20px 20px 20px;
 }
 
